arm/virtual_machines.tf
resource "azurerm_linux_virtual_machine" "edge" {
  for_each = module.configs.edgeNodes

  name          = "ggstream-edge-${each.value.location}"
  computer_name = "ggstream-edge-${each.value.location}"

  resource_group_name = azurerm_resource_group.edge[each.value.region].name
  location            = each.value.azLocation
  size                = "Standard_B1s"
  admin_username      = "vlad"
  network_interface_ids = [
    azurerm_network_interface.edge[each.value.location].id,
  ]

  tags = {
    type        = "edge"
    description = "Virtual Machine"
    vm          = "ggstream-edge-${each.value.location}"
    region      = each.value.region
    ring        = each.value.ring
  }

  admin_ssh_key {
    username   = "vlad"
    public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCkBlrUSWi3tsC2LX5z8qdvPePAZXAhxhg0aMdKgMJ6LhRSc4pDrCAMc1QSLu1JxyQ6fFp42GAme4c2fnwR20AgwFrQuNVCXnp7ISBxF531wYADcbRb3KtBwOQsPmsKO3nvkjJs9ZbBvHLq6PinRTEOBCOlFiAgV7fWKFsckMH4dWDMFlU48VutXsEgED2ZXZIii5NlDlyq8+e12+2CPz78+0k1oDTJLby/pUmS4gNT5hmXXtMw08ooMrhlkk7ddxy7H7xDL2R7MfxOSF2UUVdENdqXjqUdiE6FmDbSanK9KYvvp0RXxSH1vPLu7oKLo1Mjf8nqKeHqNQzgoSAvB41vwYdjjaHCHOSUjX7rAh7zEWAsf0BMPr0vFTEBmjvcvoXUiUth/fZuTriK2B5Iq7u5XvHmlTS7GdQj+GicOy7BmDa0NVBhXLFnps3dUU [...]
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "18.04-LTS"
    version   = "latest"
  }

  boot_diagnostics {
    storage_account_uri = azurerm_storage_account.edge[each.value.location].primary_blob_endpoint
  }

  identity {
    type = "SystemAssigned"
  }
}
